test/error/OpAssignTrailingId.fu
public static class Test
{
	public static bool Run()
	{
		int x;
		x = foo bar; //ERROR: Expected ';', got identifier //ERROR: Invalid expression
		return true;
	}
}
